<package>
  <name>collision_space</name>
  <version>1.0.0</version>
  <description>This package can be used to build a collision representation of the world around the robot.</description>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author email="isucan@willowgarage.com">Ioan Sucan</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rosconsole</build_depend>
  <build_depend>planning_models</build_depend>
  <build_depend>geometric_shapes</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rosconsole</run_depend>
  <run_depend>planning_models</run_depend>
  <run_depend>geometric_shapes</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rosconsole</test_depend> -->
  <!-- <test_depend>planning_models</test_depend> -->
  <!-- <test_depend>geometric_shapes</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lcollision_space `rosboost-cfg --lflags thread`" cflags="-I${prefix}/include `rosboost-cfg --cflags`"/>
</export>

</package>
