<package>
  <name>planning_models</name>
  <version>1.0.0</version>
  <description>A set of robot models that can be instantiated from a parsed URDF file.</description>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/urdf</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="isucan@willowgarage.com">Ioan Sucan</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>urdf</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>roslib</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdf</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>roslib</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>urdf</test_depend> -->
  <!-- <test_depend>rosconsole</test_depend> -->
  <!-- <test_depend>geometric_shapes</test_depend> -->
  <!-- <test_depend>angles</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lplanning_models `rosboost-cfg --lflags thread`" cflags="-I${prefix}/include `rosboost-cfg --cflags`"/>
</export>

</package>
